fixed alignment on homepage

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -95,7 +95,7 @@ p {
   position: absolute;
   bottom: -44px;
   width: 100%;
-  height: 57px;
+  height: 73px;
 }
 
 .signin-image {
